fix gaps on info page

--- a/src/pages/Info/Info.scss
+++ b/src/pages/Info/Info.scss
@@ -1,14 +1,13 @@
 .info {
-  padding-top: 50px;
-
   &__title {
     text-align: center;
     text-shadow: 1px 3px 4px rgba(0, 0, 0, 0.3);
     transition: all 400ms ease;
     font-family: 'Kaisei HarunoUmi', serif;
-    font-size: 40px;
+    font-size: 48px;
     line-height: 48px;
     font-weight: 700;
+    padding: 48px 0;
 
     &::first-letter {
       color: red;
@@ -27,7 +26,6 @@
   &__content {
     font-size: 18px;
     line-height: 24px;
-    margin-top: 74px;
     padding: 24px 0;
     transition: all 400ms ease;
   }
@@ -54,7 +52,7 @@
   }
 
   &__icons {
-    margin-top: 100px;
+    margin-top: 48px;
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -72,7 +70,7 @@
     }
 
     svg {
-      font-size: 100px;
+      font-size: 50px;
       color: rgba(0, 0, 0, 0.1);
 
       &.appear {
